--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "@radix-ui/react-select": "^2.1.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/leaflet": "^1.9.19",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
